Create A PartialView For NavBar.

--- a/Content/bootstrap.css
+++ b/Content/bootstrap.css
@@ -4748,7 +4748,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   border-color: #101010;
 }
 .navbar-inverse .navbar-link {
-  color: #9d9d9d;
+  color: red;
 }
 .navbar-inverse .navbar-link:hover {
   color: #fff;
