Solve Some Issues happend

--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Diagnostics.Eventing.Reader
-@model IEnumerable<Vidly.Models.Customer>
+@model IEnumerable<Vidly.Models.Customeer>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
