--- a/Views/Customer/Details.cshtml
+++ b/Views/Customer/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidly.Models.Customer
+﻿@model Vidly.Models.Customeer
 @{
     ViewBag.Title = Model.Name;
     Layout = "~/Views/Shared/_Layout.cshtml";
