Add Forms To Customer and Create Action To Add New Customer.

--- a/Views/Movie/Details.cshtml
+++ b/Views/Movie/Details.cshtml
@@ -13,11 +13,11 @@
         <h3>Genre : @Model.Genre.Name</h3>
     </li>
     <li>
-        <h3>  Release Data : @Model.ReleaseDate.ToLongDateString()</h3>
+        <h3>  Release Date : @Model.ReleaseDate.ToLongDateString()</h3>
 
     </li>
     <li>
-        <h3> Data Added : @Model.DateAdded.ToLongTimeString()</h3>
+        <h3> Date Added : @Model.DateAdded.ToLongTimeString()</h3>
 
     </li>
     <li>
