--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -27,7 +27,7 @@ else
         {
             <tr>
 
-                <td>@Html.ActionLink(item.Name, "Details", "Customer", new {id = item.Id }, null)</td>
+                <td>@Html.ActionLink(item.Name, "Edit", "Customer", new {id = item.Id }, null)</td>
                 <td>@item.MemberShipType.Name</td>
                 
                     
