--- a/Views/Movie/Index.cshtml
+++ b/Views/Movie/Index.cshtml
@@ -5,6 +5,14 @@
 }
 
 <h2>Movies</h2>
+<br/>
+<p>
+    @Html.ActionLink("New Movie" , "New" , "Movie" , 
+        new{@class ="btn btn-primary"})
+</p>
+
+
+<br/> 
 
 <table class="table table-bordered table-hover"  >
 
@@ -21,7 +29,7 @@
             <tr>
                 <td>
 
-                  @Html.ActionLink(item.Name,"Details","Movie",new {id = item.Id} ,null)</td>
+                  @Html.ActionLink(item.Name,"Edit","Movie",new {id = item.Id} ,null)</td>
                 <td>@item.Genre.Name</td>
             </tr>
         }
