--- a/Views/Customer/CustomerForm.cshtml
+++ b/Views/Customer/CustomerForm.cshtml
@@ -6,34 +6,53 @@
 
 <h2>New Customer</h2>
 
+
+
 @using (Html.BeginForm("Save", "Customer"))
 {
+    @Html.ValidationSummary(true, "Please fixing The Following Errors");
+
     <div class="form-group">
         @Html.LabelFor(m => m.Customeer.Name)
         @Html.TextBoxFor(m => m.Customeer.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Customeer.Name)
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.Customeer.MemberShipType)
+
+        @Html.DropDownListFor(m => m.Customeer.MemberShipTypeId, new SelectList(Model.MemberShipTypes, "Id", "Name"), "Select Member Ship", new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Customeer.MemberShipTypeId)
     </div>
 
     <div class="form-group">
         @Html.LabelFor(m => m.Customeer.BirthDate)
         @Html.TextBoxFor(m => m.Customeer.BirthDate, "{0 : d MMM yyyy }", new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Customeer.BirthDate)
     </div>
 
-    
 
 
-    <div class="form-group">
-        @Html.LabelFor(m => m.Customeer.MemberShipType)
-        @Html.DropDownListFor(m => m.Customeer.MemberShipTypeId,new SelectList(Model.MemberShipTypes,"Id" ,"Name") ,"Select Member Ship", new { @class = "form-control" })
-    </div>
+
+
 
     <div class="checkbox">
         <label>
             @Html.CheckBoxFor(m => m.Customeer.IsSubscribedToNewsLetter) Subscribed To News Letter?
         </label>
+        @Html.ValidationMessageFor(c => c.Customeer.IsSubscribedToNewsLetter)
     </div>
 
-    @Html.HiddenFor(m=>m.Customeer.Id)
-    <button type="submit" class="btn btn-primary">Save  </button>
+
+    <button type="submit" class="btn btn-primary"> Save  </button>
+
+    @Html.HiddenFor(m => m.Customeer.Id)
+    @Html.AntiForgeryToken()
+
 
 }
 
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+}
