Finish Something in Contact Page.

--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -4,14 +4,48 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<style>
+    .th {
+        text-align: center;
+        font-size: 15px;
+    }
+    .x {
+        font-size: 20px;
+    }
+</style>
+<table class="table table-bordered table-hover  th">
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+    <thead class="thead">
+
+        <tr>
+            <th class="th x" >Who I'm</th>
+            <th class="th x" colspan="3">Contact Me</th>
+            <th class="th x">My Number</th>
+        </tr>
+
+    </thead>
+    <tbody>
+    
+        <tr>
+
+            <td rowspan="2">  Ahmed Yousef El-Bardwil  </td>
+        <tr>
+
+            <td rowspan=3><a href="https://twitter.com/a7mdkonfa">Twitter </a></td>
+            <td><a href="https://lajjayousef66@gmail.com">Gmail </a></td>
+            <td><a href="https://twitter.com/a7mdkonfa">LinkedIn </a></td>
+            <td>0120139400</td>
+        </tr>
+
+        
+
+
+    </tbody>
+
+
+
+
+
+
+
+</table>
