--- a/Content/Site.css
+++ b/Content/Site.css
@@ -4,7 +4,7 @@
 }
 
 /* Set padding to keep content from hitting the edges */
-.body-content {
+.body-content { 
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -22,10 +22,12 @@ select,
 textarea {
     max-width: 280px;
 }
-.field-validation-error {
+.field-validation-error
+,label.error {
     color: red;
 }
-.input-validation-error {
+.input-validation-error,
+input.error{
     border: 2px solid red;
 }
 .validation-summary-errors{
