--- a/Views/Shared/_NavBar.cshtml
+++ b/Views/Shared/_NavBar.cshtml
@@ -10,8 +10,12 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
+                <li>@Html.ActionLink("New Rental", "New", "Rentals")</li>
+
                 <li>@Html.ActionLink("Customers", "Index", "Customer")</li>
+
                 <li>@Html.ActionLink("Movies", "Index", "Movie")</li>
+
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
             </ul>
             @Html.Partial("_LoginPartial")
